# learn-optix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Uninstall.exe.nsis
cmake/: FindOptiX.cmake  README.md  configure_cuda.cmake  configure_opengl.cmake  configure_optix.cmake  cuda_compile_and_embed.cmake  embed_ptx.cmake  run_bin2c.cmake
cmake/modules/: FindOPTIX.cmake
common/: CMakeLists.txt  gdt.h
common/GLFWindow/: GLFWindow.cpp  GLFWindow.h
common/math/: constants.h  fixedpoint.h  vec.h
notes/: README.md
source/: CMakeLists.txt  CUDABuffer.h  LaunchParams.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp  optix7.h
